[fix] StoriesCardList desc overflow line clamp to 7

--- a/components/StoriesCardList/StoriesCardList.module.scss
+++ b/components/StoriesCardList/StoriesCardList.module.scss
@@ -44,13 +44,13 @@
   }
   p {
     display: block;
-    min-height: 18svh;
+    height: 18svh;
     font-size: 16px;
     width: 60%;
     line-height: 1.2em;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 7;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
   }
